refactor: remove Pint & simplify to single‑series `value` model
Remove unit-conversion (pint); normalize DataFrames to a single `value` column.
Unify SDK/API/DB routing with `SeriesRegistry`; update tests/notebooks. BREAKING:
plain floats only, `series_id` replaces `series_ids`, single-series APIs.

--- a/examples/nb_01_write_read_pandas.ipynb
+++ b/examples/nb_01_write_read_pandas.ipynb
@@ -78,7 +78,7 @@
    "source": [
     "### Insert Data\n",
     "\n",
-    "When multiple series share the same name, narrow to a single series with `.where()` before inserting. The DataFrame column name doesn't matter for single-series inserts."
+    "DataFrames must have fixed columns: `['valid_time', 'value']` for point-in-time data, or `['valid_time', 'valid_time_end', 'value']` for intervals."
    ]
   },
   {
@@ -106,7 +106,7 @@
     "for turbine in gotland_wind.list_labels('turbine'):\n",
     "    df = pd.DataFrame({\n",
     "        'valid_time': dates,\n",
-    "        'power': [50.0 + i * 1.5 for i in range(24)],\n",
+    "        'value': [50.0 + i * 1.5 for i in range(24)],\n",
     "    })\n",
     "    gotland_wind.where(turbine=turbine).insert(df)\n",
     "    print(f\"Inserted 24 points for turbine {turbine}\")"
@@ -134,8 +134,8 @@
       "\n",
       "  id=1  unit=MW  labels={'site': 'Gotland', 'type': 'onshore', 'turbine': 'T01'}\n",
       "  id=2  unit=MW  labels={'site': 'Gotland', 'type': 'onshore', 'turbine': 'T02'}\n",
-      "  id=3  unit=MW  labels={'site': 'Gotland', 'turbine': 'T03', 'type': 'offshore'}\n",
-      "  id=4  unit=MW  labels={'type': 'onshore', 'turbine': 'T01', 'site': 'Skane'}\n"
+      "  id=3  unit=MW  labels={'site': 'Gotland', 'type': 'offshore', 'turbine': 'T03'}\n",
+      "  id=4  unit=MW  labels={'site': 'Skane', 'type': 'onshore', 'turbine': 'T01'}\n"
      ]
     }
    ],
@@ -176,7 +176,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read Data"
+    "### Read Data\n",
+    "\n",
+    "TimeDB enforces single-series reads for data consistency. To read multiple series, use a loop or read them individually."
    ]
   },
   {
@@ -189,22 +191,28 @@
      "output_type": "stream",
      "text": [
       "T01 at Gotland:\n",
-      "name                       wind_power\n",
-      "valid_time                           \n",
-      "2025-01-01 00:00:00+00:00        50.0\n",
-      "2025-01-01 01:00:00+00:00        51.5\n",
-      "2025-01-01 02:00:00+00:00        53.0\n",
-      "2025-01-01 03:00:00+00:00        54.5\n",
-      "2025-01-01 04:00:00+00:00        56.0\n",
+      "                           value\n",
+      "valid_time                      \n",
+      "2025-01-01 00:00:00+00:00   50.0\n",
+      "2025-01-01 01:00:00+00:00   51.5\n",
+      "2025-01-01 02:00:00+00:00   53.0\n",
+      "2025-01-01 03:00:00+00:00   54.5\n",
+      "2025-01-01 04:00:00+00:00   56.0\n",
       "\n",
-      "All Gotland wind (3 series):\n",
-      "name                       wind_power  wind_power  wind_power\n",
-      "valid_time                                                   \n",
-      "2025-01-01 00:00:00+00:00        50.0        50.0        50.0\n",
-      "2025-01-01 01:00:00+00:00        51.5        51.5        51.5\n",
-      "2025-01-01 02:00:00+00:00        53.0        53.0        53.0\n",
-      "2025-01-01 03:00:00+00:00        54.5        54.5        54.5\n",
-      "2025-01-01 04:00:00+00:00        56.0        56.0        56.0\n"
+      "Reading all Gotland wind turbines:\n",
+      "  T01: 24 rows\n",
+      "  T02: 24 rows\n",
+      "  T03: 24 rows\n",
+      "\n",
+      "Combined DataFrame shape: (24, 3)\n",
+      "                            T01   T02   T03\n",
+      "                          value value value\n",
+      "valid_time                                 \n",
+      "2025-01-01 00:00:00+00:00  50.0  50.0  50.0\n",
+      "2025-01-01 01:00:00+00:00  51.5  51.5  51.5\n",
+      "2025-01-01 02:00:00+00:00  53.0  53.0  53.0\n",
+      "2025-01-01 03:00:00+00:00  54.5  54.5  54.5\n",
+      "2025-01-01 04:00:00+00:00  56.0  56.0  56.0\n"
      ]
     }
    ],
@@ -214,10 +222,20 @@
     "print(\"T01 at Gotland:\")\n",
     "print(df_t01.head())\n",
     "\n",
-    "# Read all Gotland wind series at once\n",
-    "df_gotland = td.series(\"wind_power\").where(site=\"Gotland\").read()\n",
-    "print(f\"\\nAll Gotland wind ({len(df_gotland.columns)} series):\")\n",
-    "print(df_gotland.head())"
+    "# To read multiple series, loop through them\n",
+    "print(f\"\\nReading all Gotland wind turbines:\")\n",
+    "gotland_wind = td.series(\"wind_power\").where(site=\"Gotland\")\n",
+    "\n",
+    "dfs = {}\n",
+    "for turbine in gotland_wind.list_labels('turbine'):\n",
+    "    df = gotland_wind.where(turbine=turbine).read()\n",
+    "    dfs[turbine] = df\n",
+    "    print(f\"  {turbine}: {len(df)} rows\")\n",
+    "\n",
+    "# Combine into a single DataFrame if needed\n",
+    "df_combined = pd.concat(dfs, axis=1)\n",
+    "print(f\"\\nCombined DataFrame shape: {df_combined.shape}\")\n",
+    "print(df_combined.head())"
    ]
   },
   {
@@ -277,9 +295,9 @@
      "text": [
       "No match: No series found matching filters: name=wind_power, unit=None, labels={'site': 'Mars'}\n",
       "\n",
-      "Column mismatch: DataFrame has 2 series columns, but collection resolves to 1 series. Expected exactly 1 data column (excluding time columns).\n",
+      "Wrong columns: For point-in-time data, DataFrame must have columns ['valid_time', 'value']. Found: ['valid_time', 'power']\n",
       "\n",
-      "Missing column: Column 'valid_time' not found in DataFrame\n"
+      "Missing column: DataFrame must have 2 columns ['valid_time', 'value'] or 3 columns ['valid_time', 'valid_time_end', 'value']. Found 1 columns: ['value']\n"
      ]
     }
    ],
@@ -290,16 +308,16 @@
     "except ValueError as e:\n",
     "    print(f\"No match: {e}\")\n",
     "\n",
-    "# 2. Multiple data columns for a single series\n",
+    "# 2. Wrong column names\n",
     "try:\n",
-    "    df_wrong = pd.DataFrame({'valid_time': dates[:3], 'col_a': [1, 2, 3], 'col_b': [4, 5, 6]})\n",
+    "    df_wrong = pd.DataFrame({'valid_time': dates[:3], 'power': [1, 2, 3]})\n",
     "    td.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(df_wrong)\n",
     "except ValueError as e:\n",
-    "    print(f\"\\nColumn mismatch: {e}\")\n",
+    "    print(f\"\\nWrong columns: {e}\")\n",
     "\n",
     "# 3. Missing time column\n",
     "try:\n",
-    "    td.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(pd.DataFrame({'power': [1.0]}))\n",
+    "    td.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(pd.DataFrame({'value': [1.0]}))\n",
     "except ValueError as e:\n",
     "    print(f\"\\nMissing column: {e}\")"
    ]
@@ -310,11 +328,13 @@
    "source": [
     "### Best Practices\n",
     "\n",
-    "- Use `list_series()` and `count()` to verify your filters before inserting\n",
-    "- Narrow to a single series with `.where()` before inserting when series share a name\n",
-    "- DataFrames need a `valid_time` column with timezone-aware timestamps\n",
-    "- Single-series inserts accept any column name; multi-series inserts match columns by series name\n",
-    "- Use `overlapping=True` for forecasts/versioned data (default is flat/immutable)"
+    "- **Single-series operations**: All read, insert, and update operations work on a single series at a time\n",
+    "- Use `list_series()` and `count()` to verify your filters resolve to one series\n",
+    "- Narrow to a single series with `.where()` before reading or inserting\n",
+    "- **Fixed DataFrame columns**: Use `['valid_time', 'value']` for point-in-time or `['valid_time', 'valid_time_end', 'value']` for intervals\n",
+    "- `valid_time` must have timezone-aware timestamps\n",
+    "- Use `overlapping=True` for forecasts/versioned data (default is flat/immutable)\n",
+    "- To work with multiple series, loop through them using `list_labels()` or `list_series()`"
    ]
   }
  ],
