--- a/examples/nb_02_units_validation.ipynb
+++ b/examples/nb_02_units_validation.ipynb
@@ -83,7 +83,7 @@
     "]:\n",
     "    df = pd.DataFrame({\n",
     "        \"valid_time\": times,\n",
-    "        name: pd.Series(values, dtype=f\"pint[{unit}]\"),\n",
+    "        \"value\": pd.Series(values, dtype=f\"pint[{unit}]\"),\n",
     "    })\n",
     "    td.series(name).insert(df)\n",
     "\n",
@@ -130,10 +130,18 @@
      "output_type": "stream",
      "text": [
       "Column dtypes (units preserved):\n",
-      "name\n",
-      "power                pint[megawatt][Float64]\n",
-      "wind_speed     pint[meter / second][Float64]\n",
-      "temperature    pint[degree_Celsius][Float64]\n",
+      "value     float64\n",
+      "name          str\n",
+      "unit          str\n",
+      "labels     object\n",
+      "value     float64\n",
+      "name          str\n",
+      "unit          str\n",
+      "labels     object\n",
+      "value     float64\n",
+      "name          str\n",
+      "unit          str\n",
+      "labels     object\n",
       "dtype: object\n",
       "\n"
      ]
@@ -158,13 +166,33 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
        "      <th>name</th>\n",
-       "      <th>power</th>\n",
-       "      <th>wind_speed</th>\n",
-       "      <th>temperature</th>\n",
+       "      <th>unit</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>value</th>\n",
+       "      <th>name</th>\n",
+       "      <th>unit</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>value</th>\n",
+       "      <th>name</th>\n",
+       "      <th>unit</th>\n",
+       "      <th>labels</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>valid_time</th>\n",
+       "      <th>series_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -173,46 +201,104 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2025-01-01 00:00:00+00:00</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>20.0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1.00</td>\n",
+       "      <td>power</td>\n",
+       "      <td>MW</td>\n",
+       "      <td>{}</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-01-01 01:00:00+00:00</th>\n",
+       "      <th>1</th>\n",
        "      <td>1.05</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>20.5</td>\n",
+       "      <td>power</td>\n",
+       "      <td>MW</td>\n",
+       "      <td>{}</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-01-01 02:00:00+00:00</th>\n",
-       "      <td>1.1</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>21.0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1.10</td>\n",
+       "      <td>power</td>\n",
+       "      <td>MW</td>\n",
+       "      <td>{}</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-01-01 03:00:00+00:00</th>\n",
+       "      <th>1</th>\n",
        "      <td>1.15</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>21.5</td>\n",
+       "      <td>power</td>\n",
+       "      <td>MW</td>\n",
+       "      <td>{}</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-01-01 04:00:00+00:00</th>\n",
-       "      <td>1.2</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>22.0</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1.20</td>\n",
+       "      <td>power</td>\n",
+       "      <td>MW</td>\n",
+       "      <td>{}</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "name                       power  wind_speed  temperature\n",
-       "valid_time                                               \n",
-       "2025-01-01 00:00:00+00:00    1.0         5.0         20.0\n",
-       "2025-01-01 01:00:00+00:00   1.05         5.2         20.5\n",
-       "2025-01-01 02:00:00+00:00    1.1         5.4         21.0\n",
-       "2025-01-01 03:00:00+00:00   1.15         5.6         21.5\n",
-       "2025-01-01 04:00:00+00:00    1.2         5.8         22.0"
+       "                                     value   name unit labels  value name  \\\n",
+       "valid_time                series_id                                         \n",
+       "2025-01-01 00:00:00+00:00 1           1.00  power   MW     {}    NaN  NaN   \n",
+       "2025-01-01 01:00:00+00:00 1           1.05  power   MW     {}    NaN  NaN   \n",
+       "2025-01-01 02:00:00+00:00 1           1.10  power   MW     {}    NaN  NaN   \n",
+       "2025-01-01 03:00:00+00:00 1           1.15  power   MW     {}    NaN  NaN   \n",
+       "2025-01-01 04:00:00+00:00 1           1.20  power   MW     {}    NaN  NaN   \n",
+       "\n",
+       "                                    unit labels  value name unit labels  \n",
+       "valid_time                series_id                                      \n",
+       "2025-01-01 00:00:00+00:00 1          NaN    NaN    NaN  NaN  NaN    NaN  \n",
+       "2025-01-01 01:00:00+00:00 1          NaN    NaN    NaN  NaN  NaN    NaN  \n",
+       "2025-01-01 02:00:00+00:00 1          NaN    NaN    NaN  NaN  NaN    NaN  \n",
+       "2025-01-01 03:00:00+00:00 1          NaN    NaN    NaN  NaN  NaN    NaN  \n",
+       "2025-01-01 04:00:00+00:00 1          NaN    NaN    NaN  NaN  NaN    NaN  "
       ]
      },
      "execution_count": 4,
@@ -225,6 +311,12 @@
     "df_power = td.series(\"power\").read()\n",
     "df_wind = td.series(\"wind_speed\").read()\n",
     "df_temp = td.series(\"temperature\").read()\n",
+    "\n",
+    "# Rename columns to distinguish series when concatenating\n",
+    "df_power = df_power.rename(columns={'value': 'power'})\n",
+    "df_wind = df_wind.rename(columns={'value': 'wind_speed'})\n",
+    "df_temp = df_temp.rename(columns={'value': 'temperature'})\n",
+    "\n",
     "df_all = pd.concat([df_power, df_wind, df_temp], axis=1)\n",
     "\n",
     "print(\"Column dtypes (units preserved):\")\n",
@@ -244,14 +336,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inserted 500 kW, stored as: 0.5 megawatt (auto-converted)\n"
+      "                                     value   name unit labels\n",
+      "valid_time                series_id                          \n",
+      "2025-01-02 00:00:00+00:00 1          500.0  power   MW     {}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'power'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/rebase-energy/timedb/.venv/lib/python3.14/site-packages/pandas/core/indexes/base.py:3641\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3640\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3641\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3642\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:168\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:197\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7668\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7676\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mKeyError\u001b[39m: 'power'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     12\u001b[39m df_check = td.series(\u001b[33m\"\u001b[39m\u001b[33mpower\u001b[39m\u001b[33m\"\u001b[39m).read(start_valid=new_times[\u001b[32m0\u001b[39m], end_valid=new_times[\u001b[32m0\u001b[39m] + timedelta(hours=\u001b[32m1\u001b[39m))\n\u001b[32m     13\u001b[39m \u001b[38;5;28mprint\u001b[39m(df_check)\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mInserted 500 kW, stored as: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mdf_check\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mpower\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m.iloc[\u001b[32m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m (auto-converted)\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/rebase-energy/timedb/.venv/lib/python3.14/site-packages/pandas/core/frame.py:4378\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4376\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4377\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4378\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4379\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4380\u001b[39m     indexer = [indexer]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/rebase-energy/timedb/.venv/lib/python3.14/site-packages/pandas/core/indexes/base.py:3648\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3643\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3644\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3645\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3646\u001b[39m     ):\n\u001b[32m   3647\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m3648\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3649\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3650\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3651\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3652\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3653\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+      "\u001b[31mKeyError\u001b[39m: 'power'"
      ]
     }
    ],
@@ -261,14 +376,14 @@
     "\n",
     "df_kw = pd.DataFrame({\n",
     "    \"valid_time\": new_times,\n",
-    "    \"power\": pd.Series([500.0] * 24, dtype=\"pint[kW]\"),\n",
+    "    \"value\": pd.Series([500.0] * 24, dtype=\"pint[kW]\"),\n",
     "})\n",
     "\n",
     "td.series(\"power\").insert(df_kw)\n",
     "\n",
     "# Read back - should show 0.5 MW (500 kW converted)\n",
     "df_check = td.series(\"power\").read(start_valid=new_times[0], end_valid=new_times[0] + timedelta(hours=1))\n",
-    "print(f\"Inserted 500 kW, stored as: {df_check.iloc[0]['power']} (auto-converted)\")"
+    "print(f\"Inserted 500 kW, stored as: {df_check['value'].iloc[0]} (auto-converted)\")"
    ]
   },
   {
@@ -282,23 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rejected: IncompatibleUnitError\n",
-      "  Cannot convert megawatt_hour to MW: incompatible dimensionality (Cannot convert from 'megawatt_hour' ([mass] * [length] ** 2 / [time] ** 2) to 'megawatt' ([mass] * [length] ** 2 / [time] ** 3))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Try inserting MWh (energy) into MW (power) series - should fail\n",
     "df_mwh = pd.DataFrame({\n",
     "    \"valid_time\": new_times,\n",
-    "    \"power\": pd.Series([10.0] * 24, dtype=\"pint[MWh]\"),\n",
+    "    \"value\": pd.Series([10.0] * 24, dtype=\"pint[MWh]\"),\n",
     "})\n",
     "\n",
     "try:\n",
