--- a/examples/nb_03_forecast_revisions.ipynb
+++ b/examples/nb_03_forecast_revisions.ipynb
@@ -50,7 +50,7 @@
      "output_type": "stream",
      "text": [
       "  flat: unit=MW  overlapping=False  labels={'type': 'power_actual'}\n",
-      "  forecast: unit=MW  overlapping=True  labels={'model': 'sinus_with_error', 'type': 'power_forecast'}\n"
+      "  forecast: unit=MW  overlapping=True  labels={'type': 'power_forecast', 'model': 'sinus_with_error'}\n"
      ]
     }
    ],
@@ -118,14 +118,14 @@
     "    forecast_error = np.random.normal(0, 1 + 0.3 * lead_hours)\n",
     "    forecast_values = np.round(actuals[start_idx:start_idx + forecast_horizon_hours] + forecast_error, 2)\n",
     "\n",
-    "    df_forecast = pd.DataFrame({\"valid_time\": valid_times, \"forecast\": forecast_values})\n",
+    "    df_forecast = pd.DataFrame({\"valid_time\": valid_times, \"value\": forecast_values})\n",
     "    td.series(\"forecast\").where(type='power_forecast', model='sinus_with_error').insert(\n",
     "        df=df_forecast, known_time=known_time\n",
     "    )\n",
     "\n",
     "# Insert actual values\n",
     "actual_valid_times = [base_valid_time + timedelta(hours=i) for i in range(total_hours)]\n",
-    "df_actual = pd.DataFrame({\"valid_time\": actual_valid_times, \"flat\": np.round(actuals, 2)})\n",
+    "df_actual = pd.DataFrame({\"valid_time\": actual_valid_times, \"value\": np.round(actuals, 2)})\n",
     "td.series(\"flat\").where(type='power_actual').insert(df=df_actual)\n",
     "\n",
     "print(f\"Inserted {num_forecasts} forecast batches + actuals ({total_hours} hours)\")"
@@ -190,7 +190,7 @@
        "    <tr>\n",
        "      <th>2025-01-01 02:00:00+00:00</th>\n",
        "      <td>49.33</td>\n",
-       "      <td>48.3</td>\n",
+       "      <td>48.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-01-01 03:00:00+00:00</th>\n",
@@ -200,7 +200,7 @@
        "    <tr>\n",
        "      <th>2025-01-01 04:00:00+00:00</th>\n",
        "      <td>65.09</td>\n",
-       "      <td>65.6</td>\n",
+       "      <td>65.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-01-01 05:00:00+00:00</th>\n",
@@ -215,7 +215,7 @@
        "    <tr>\n",
        "      <th>2025-01-01 07:00:00+00:00</th>\n",
        "      <td>92.28</td>\n",
-       "      <td>89.9</td>\n",
+       "      <td>89.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-01-01 08:00:00+00:00</th>\n",
@@ -236,12 +236,12 @@
        "valid_time                                 \n",
        "2025-01-01 00:00:00+00:00     45.79   45.29\n",
        "2025-01-01 01:00:00+00:00     42.38   42.56\n",
-       "2025-01-01 02:00:00+00:00     49.33    48.3\n",
+       "2025-01-01 02:00:00+00:00     49.33   48.30\n",
        "2025-01-01 03:00:00+00:00     61.33   58.44\n",
-       "2025-01-01 04:00:00+00:00     65.09    65.6\n",
+       "2025-01-01 04:00:00+00:00     65.09   65.60\n",
        "2025-01-01 05:00:00+00:00     66.13   66.72\n",
        "2025-01-01 06:00:00+00:00     87.27   82.85\n",
-       "2025-01-01 07:00:00+00:00     92.28    89.9\n",
+       "2025-01-01 07:00:00+00:00     92.28   89.90\n",
        "2025-01-01 08:00:00+00:00     98.09   99.69\n",
        "2025-01-01 09:00:00+00:00    111.52  109.52"
       ]
@@ -265,8 +265,8 @@
     ").read(start_valid=start_valid, end_valid=end_valid)\n",
     "\n",
     "df_flat = pd.DataFrame({\n",
-    "    'forecast': df_forecast['forecast'],\n",
-    "    'actual': df_actual['flat']\n",
+    "    'forecast': df_forecast['value'],\n",
+    "    'actual': df_actual['value']\n",
     "}, index=df_forecast.index)\n",
     "\n",
     "df_flat.head(10)"
@@ -350,8 +350,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>forecast</th>\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>known_time</th>\n",
@@ -390,14 +390,14 @@
        "</div>"
       ],
       "text/plain": [
-       "name                                                 forecast\n",
-       "known_time                valid_time                         \n",
-       "2025-01-01 00:00:00+00:00 2025-01-01 00:00:00+00:00     45.79\n",
-       "                          2025-01-01 01:00:00+00:00     42.38\n",
-       "                          2025-01-01 02:00:00+00:00     49.33\n",
-       "                          2025-01-01 03:00:00+00:00     61.33\n",
-       "                          2025-01-01 04:00:00+00:00     65.09\n",
-       "                          2025-01-01 05:00:00+00:00     66.13"
+       "                                                     value\n",
+       "known_time                valid_time                      \n",
+       "2025-01-01 00:00:00+00:00 2025-01-01 00:00:00+00:00  45.79\n",
+       "                          2025-01-01 01:00:00+00:00  42.38\n",
+       "                          2025-01-01 02:00:00+00:00  49.33\n",
+       "                          2025-01-01 03:00:00+00:00  61.33\n",
+       "                          2025-01-01 04:00:00+00:00  65.09\n",
+       "                          2025-01-01 05:00:00+00:00  66.13"
       ]
      },
      "execution_count": 6,
@@ -447,13 +447,13 @@
     "\n",
     "for idx, known_time in enumerate(unique_known_times):\n",
     "    forecast_data = df_forecast_overlapping.xs(known_time, level=\"known_time\")\n",
-    "    values = forecast_data['forecast'].astype(float)\n",
+    "    values = forecast_data['value'].astype(float)\n",
     "    label = f\"Forecast {idx+1} ({known_time.strftime('%b %d %H:%M')})\"\n",
     "    ax.plot(forecast_data.index, values, linewidth=1.2, linestyle='--',\n",
     "            color=colors[idx % len(colors)], alpha=0.6, label=label)\n",
     "\n",
     "# Plot actuals on top\n",
-    "actual_vals = df_actual_overlapping['flat'].astype(float)\n",
+    "actual_vals = df_actual_overlapping['value'].astype(float)\n",
     "ax.plot(df_actual_overlapping.index, actual_vals, linewidth=2.5,\n",
     "        color='#2ca02c', label='Actual', alpha=0.9, zorder=10)\n",
     "\n",
