--- a/examples/nb_04_timeseries_changes.ipynb
+++ b/examples/nb_04_timeseries_changes.ipynb
@@ -92,8 +92,8 @@
     "]\n",
     "meter_values = [round(100.0 + i * 5.0 + np.random.normal(0, 0.2), 2) for i in range(24)]\n",
     "\n",
-    "df_temp = pd.DataFrame({'valid_time': times, 'temperature': temperature_values})\n",
-    "df_meter = pd.DataFrame({'valid_time': times, 'meter_reading': meter_values})\n",
+    "df_temp = pd.DataFrame({'valid_time': times, 'value': temperature_values})\n",
+    "df_meter = pd.DataFrame({'valid_time': times, 'value': meter_values})\n",
     "\n",
     "# Create series\n",
     "if td.series(\"meter_reading\").count() == 0:\n",
@@ -106,7 +106,7 @@
     "\n",
     "# Insert flat series\n",
     "result_flat = td.series(\"meter_reading\").insert(df=df_meter)\n",
-    "print(f\"\\nInserted FLAT: meter_reading (series_id={result_flat.series_ids['meter_reading']})\")\n",
+    "print(f\"\\nInserted FLAT: meter_reading (series_id={result_flat.series_id})\")\n",
     "\n",
     "# Insert TWO batches for overlapping series to demonstrate versioning\n",
     "known_time_1 = base_time\n",
@@ -115,15 +115,15 @@
     "\n",
     "known_time_2 = base_time + timedelta(hours=2)\n",
     "temperature_values_revised = [round(v + np.random.normal(0, 1.0), 2) for v in temperature_values]\n",
-    "df_temp_revised = pd.DataFrame({'valid_time': times, 'temperature': temperature_values_revised})\n",
+    "df_temp_revised = pd.DataFrame({'valid_time': times, 'value': temperature_values_revised})\n",
     "result_batch_2 = td.series(\"temperature\").insert(df=df_temp_revised, known_time=known_time_2)\n",
     "print(f\"Inserted OVERLAPPING Batch 2 (known_time={known_time_2}, batch_id={result_batch_2.batch_id})\")\n",
     "\n",
     "# Store IDs for later use\n",
     "batch_id_1 = result_batch_1.batch_id\n",
     "batch_id_2 = result_batch_2.batch_id\n",
-    "series_id_temp = result_batch_1.series_ids['temperature']\n",
-    "series_id_meter = result_flat.series_ids['meter_reading']\n",
+    "series_id_temp = result_batch_1.series_id\n",
+    "series_id_meter = result_flat.series_id\n",
     "\n",
     "print(f\"\\nEach valid_time now has 2 versions in the overlapping series.\")"
    ]
@@ -181,8 +181,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>temperature</th>\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>known_time</th>\n",
@@ -206,7 +206,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-01-01 03:00:00+00:00</th>\n",
-       "      <td>24.3</td>\n",
+       "      <td>24.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-01-01 04:00:00+00:00</th>\n",
@@ -221,14 +221,14 @@
        "</div>"
       ],
       "text/plain": [
-       "name                                                 temperature\n",
-       "known_time                valid_time                            \n",
-       "2025-01-01 00:00:00+00:00 2025-01-01 00:00:00+00:00        20.25\n",
-       "                          2025-01-01 01:00:00+00:00        21.22\n",
-       "                          2025-01-01 02:00:00+00:00        22.82\n",
-       "                          2025-01-01 03:00:00+00:00         24.3\n",
-       "                          2025-01-01 04:00:00+00:00        24.21\n",
-       "                          2025-01-01 05:00:00+00:00        24.71"
+       "                                                     value\n",
+       "known_time                valid_time                      \n",
+       "2025-01-01 00:00:00+00:00 2025-01-01 00:00:00+00:00  20.25\n",
+       "                          2025-01-01 01:00:00+00:00  21.22\n",
+       "                          2025-01-01 02:00:00+00:00  22.82\n",
+       "                          2025-01-01 03:00:00+00:00  24.30\n",
+       "                          2025-01-01 04:00:00+00:00  24.21\n",
+       "                          2025-01-01 05:00:00+00:00  24.71"
       ]
      },
      "execution_count": 3,
@@ -301,7 +301,7 @@
     "# Get both versions from df_temp_all_versions\n",
     "for known_time in df_temp_all_versions.index.get_level_values('known_time').unique():\n",
     "    df_version = df_temp_all_versions.xs(known_time, level='known_time')\n",
-    "    temp_y = df_version['temperature'].astype(float)\n",
+    "    temp_y = df_version['value'].astype(float)\n",
     "    label = f\"Forecast {known_time.strftime('%H:%M')}\"\n",
     "    ax1.plot(df_version.index.get_level_values('valid_time'), temp_y, \n",
     "             marker='o', linewidth=2, markersize=5, alpha=0.7, label=label)\n",
@@ -313,7 +313,7 @@
     "\n",
     "# Meter reading (flat series)\n",
     "ax2 = axes[1]\n",
-    "meter_y = df_meter_read['meter_reading'].astype(float)\n",
+    "meter_y = df_meter_read['value'].astype(float)\n",
     "ax2.plot(df_meter_read.index, meter_y, marker='s', linewidth=2, markersize=5, \n",
     "         color='green', alpha=0.7)\n",
     "ax2.set_ylabel('Meter Reading', fontsize=11)\n",
@@ -353,7 +353,6 @@
       "Flat update completed!\n",
       "  Updated: 124.94 -> 130.00\n",
       "  Updated records: 1\n",
-      "  Skipped (no-op): 0\n",
       "\n",
       "Verification - current value: 130.00\n"
      ]
@@ -364,7 +363,7 @@
     "update_time_flat = base_time + timedelta(hours=5)\n",
     "\n",
     "# Read current value\n",
-    "original_meter_value = float(df_meter_read.loc[update_time_flat, 'meter_reading'])\n",
+    "original_meter_value = float(df_meter_read.loc[update_time_flat, 'value'])\n",
     "print(f\"Original meter reading at {update_time_flat}: {original_meter_value:.2f}\")\n",
     "\n",
     "# Update the flat series - just need series_id and valid_time!\n",
@@ -379,15 +378,14 @@
     "\n",
     "print(f\"\\nFlat update completed!\")\n",
     "print(f\"  Updated: {original_meter_value:.2f} -> {corrected_meter_value:.2f}\")\n",
-    "print(f\"  Updated records: {len(result['updated'])}\")\n",
-    "print(f\"  Skipped (no-op): {len(result['skipped_no_ops'])}\")\n",
+    "print(f\"  Updated records: {len(result)}\")\n",
     "\n",
     "# Verify the update - read it back\n",
     "df_meter_after = td.series(\"meter_reading\").read(\n",
     "    start_valid=update_time_flat,\n",
     "    end_valid=update_time_flat + timedelta(hours=1),\n",
     ")\n",
-    "print(f\"\\nVerification - current value: {float(df_meter_after.iloc[0]['meter_reading']):.2f}\")"
+    "print(f\"\\nVerification - current value: {float(df_meter_after.iloc[0]['value']):.2f}\")"
    ]
   },
   {
@@ -450,33 +448,31 @@
     "    print(f\"  {ut}:\")\n",
     "    for known_time, row in versions.iterrows():\n",
     "        kt = known_time if not isinstance(known_time, tuple) else known_time[0]\n",
-    "        print(f\"    known_time={kt}: {float(row['temperature']):.2f}\")\n",
+    "        print(f\"    known_time={kt}: {float(row['value']):.2f}\")\n",
     "\n",
     "# METHOD 1: Update using batch_id (targeting Batch 1)\n",
     "print(f\"\\nMETHOD 1: batch_id — update {update_time_1} in Batch 1\")\n",
-    "result_1 = td.update_records(updates=[{\n",
+    "result_1 = td.series(\"temperature\").update_records(updates=[{\n",
     "    \"batch_id\": batch_id_1,\n",
     "    \"valid_time\": update_time_1,\n",
-    "    \"series_id\": series_id_temp,\n",
     "    \"value\": 29.0,\n",
     "    \"annotation\": \"Updated via batch_id (targeting Batch 1)\",\n",
     "    \"tags\": [\"method_batch_id\"],\n",
     "    \"changed_by\": \"demo@example.com\",\n",
     "}])\n",
-    "print(f\"  Updated {len(result_1['updated'])} record (new version with known_time=now())\")\n",
+    "print(f\"  Updated {len(result_1)} record (new version with known_time=now())\")\n",
     "\n",
     "# METHOD 2: Update using known_time (exact version lookup)\n",
     "print(f\"\\nMETHOD 2: known_time — update {update_time_2} from Batch 1 (known_time={known_time_1})\")\n",
-    "result_2 = td.update_records(updates=[{\n",
+    "result_2 = td.series(\"temperature\").update_records(updates=[{\n",
     "    \"known_time\": known_time_1,\n",
     "    \"valid_time\": update_time_2,\n",
-    "    \"series_id\": series_id_temp,\n",
     "    \"value\": 27.0,\n",
     "    \"annotation\": \"Updated via known_time (exact version from Batch 1)\",\n",
     "    \"tags\": [\"method_known_time\"],\n",
     "    \"changed_by\": \"demo@example.com\",\n",
     "}])\n",
-    "print(f\"  Updated {len(result_2['updated'])} record\")\n",
+    "print(f\"  Updated {len(result_2)} record\")\n",
     "\n",
     "# METHOD 3: Update using just valid_time (latest version)\n",
     "print(f\"\\nMETHOD 3: valid_time only — update latest version at {update_time_3}\")\n",
@@ -487,7 +483,7 @@
     "    \"tags\": [\"method_latest\"],\n",
     "    \"changed_by\": \"demo@example.com\",\n",
     "}])\n",
-    "print(f\"  Updated {len(result_3['updated'])} record\")"
+    "print(f\"  Updated {len(result_3)} record\")"
    ]
   },
   {
@@ -516,17 +512,17 @@
       "Valid time: 2025-01-01 06:00:00+00:00 (updated via batch_id)\n",
       "  known_time=2025-01-01 00:00:00+00:00 -> 25.79  [Batch 1 (original)]\n",
       "  known_time=2025-01-01 02:00:00+00:00 -> 26.82  [Batch 2 (revised)]\n",
-      "  known_time=2026-02-13 11:57:48.237982+00:00 -> 29.00  [UPDATE (new version)]\n",
+      "  known_time=2026-02-15 21:47:59.350862+00:00 -> 29.00  [UPDATE (new version)]\n",
       "\n",
       "Valid time: 2025-01-01 12:00:00+00:00 (updated via known_time)\n",
       "  known_time=2025-01-01 00:00:00+00:00 -> 20.12  [Batch 1 (original)]\n",
       "  known_time=2025-01-01 02:00:00+00:00 -> 19.64  [Batch 2 (revised)]\n",
-      "  known_time=2026-02-13 11:57:48.343044+00:00 -> 27.00  [UPDATE (new version)]\n",
+      "  known_time=2026-02-15 21:47:59.358713+00:00 -> 27.00  [UPDATE (new version)]\n",
       "\n",
       "Valid time: 2025-01-01 18:00:00+00:00 (updated via valid_time)\n",
       "  known_time=2025-01-01 00:00:00+00:00 -> 14.55  [Batch 1 (original)]\n",
       "  known_time=2025-01-01 02:00:00+00:00 -> 14.48  [Batch 2 (revised)]\n",
-      "  known_time=2026-02-13 11:57:48.515817+00:00 -> 25.00  [UPDATE (new version)]\n",
+      "  known_time=2026-02-15 21:47:59.366116+00:00 -> 25.00  [UPDATE (new version)]\n",
       "\n",
       "Each update created a NEW version with known_time=now().\n",
       "The original Batch 1 and Batch 2 values are preserved.\n"
@@ -548,7 +544,7 @@
     "        versions = df_versions.xs(ut, level='valid_time')\n",
     "        for idx, row in versions.iterrows():\n",
     "            known_time = idx if not isinstance(idx, tuple) else idx[0]\n",
-    "            value = float(row['temperature'])\n",
+    "            value = float(row['value'])\n",
     "            if known_time == known_time_1:\n",
     "                source = \"Batch 1 (original)\"\n",
     "            elif known_time == known_time_2:\n",
@@ -623,9 +619,9 @@
     "        for kt, row in versions.iterrows():\n",
     "            known_time = kt if not isinstance(kt, tuple) else kt[0]\n",
     "            if known_time == known_time_1:\n",
-    "                batch1_values.append(float(row['temperature']))\n",
+    "                batch1_values.append(float(row['value']))\n",
     "            elif known_time == known_time_2:\n",
-    "                batch2_values.append(float(row['temperature']))\n",
+    "                batch2_values.append(float(row['value']))\n",
     "    except KeyError:\n",
     "        pass\n",
     "\n",
@@ -642,7 +638,7 @@
     "         color='orange', alpha=0.5, linestyle='--')\n",
     "\n",
     "# Plot current (latest after updates)\n",
-    "current_y = df_current['temperature'].astype(float)\n",
+    "current_y = df_current['value'].astype(float)\n",
     "plt.plot(df_current.index, current_y, \n",
     "         marker='D', linewidth=2.5, markersize=6, \n",
     "         label='Current (latest after updates)', color='red', alpha=0.9)\n",
