--- a/examples/nb_05_api_usage.ipynb
+++ b/examples/nb_05_api_usage.ipynb
@@ -380,24 +380,16 @@
       "✓ Retrieved 24 wind_speed records via API\n",
       "\n",
       "First few rows:\n",
-      "                 valid_time  series_id  value        name unit  \\\n",
-      "0 2025-01-01 00:00:00+00:00          1   20.0  wind_speed  m/s   \n",
-      "1 2025-01-01 01:00:00+00:00          1   20.3  wind_speed  m/s   \n",
-      "2 2025-01-01 02:00:00+00:00          1   20.6  wind_speed  m/s   \n",
-      "3 2025-01-01 03:00:00+00:00          1   20.9  wind_speed  m/s   \n",
-      "4 2025-01-01 04:00:00+00:00          1   21.2  wind_speed  m/s   \n",
-      "5 2025-01-01 05:00:00+00:00          1   21.5  wind_speed  m/s   \n",
+      "                 valid_time  value\n",
+      "0 2025-01-01 00:00:00+00:00   20.0\n",
+      "1 2025-01-01 01:00:00+00:00   20.3\n",
+      "2 2025-01-01 02:00:00+00:00   20.6\n",
+      "3 2025-01-01 03:00:00+00:00   20.9\n",
+      "4 2025-01-01 04:00:00+00:00   21.2\n",
+      "5 2025-01-01 05:00:00+00:00   21.5\n",
       "\n",
-      "                                       labels  \n",
-      "0  {'site': 'Gotland', 'type': 'measurement'}  \n",
-      "1  {'site': 'Gotland', 'type': 'measurement'}  \n",
-      "2  {'site': 'Gotland', 'type': 'measurement'}  \n",
-      "3  {'site': 'Gotland', 'type': 'measurement'}  \n",
-      "4  {'site': 'Gotland', 'type': 'measurement'}  \n",
-      "5  {'site': 'Gotland', 'type': 'measurement'}  \n",
-      "\n",
-      "DataFrame shape: (24, 6)\n",
-      "Columns: ['valid_time', 'series_id', 'value', 'name', 'unit', 'labels']\n"
+      "DataFrame shape: (24, 2)\n",
+      "Columns: ['valid_time', 'value']\n"
      ]
     }
    ],
@@ -448,29 +440,13 @@
       "✓ Retrieved 6 records with versions=true\n",
       "\n",
       "First few rows (showing forecast revisions):\n",
-      "                        known_time                valid_time  series_id  \\\n",
-      "0 2026-02-13 11:58:11.690948+00:00 2025-01-01 00:00:00+00:00          2   \n",
-      "1 2026-02-13 11:58:11.690948+00:00 2025-01-01 01:00:00+00:00          2   \n",
-      "2 2026-02-13 11:58:11.690948+00:00 2025-01-01 02:00:00+00:00          2   \n",
-      "3 2026-02-13 11:58:11.690948+00:00 2025-01-01 03:00:00+00:00          2   \n",
-      "4 2026-02-13 11:58:11.690948+00:00 2025-01-01 04:00:00+00:00          2   \n",
-      "5 2026-02-13 11:58:11.690948+00:00 2025-01-01 05:00:00+00:00          2   \n",
-      "\n",
-      "   value            name unit  \\\n",
-      "0   60.0  power_forecast   MW   \n",
-      "1   59.5  power_forecast   MW   \n",
-      "2   59.0  power_forecast   MW   \n",
-      "3   58.5  power_forecast   MW   \n",
-      "4   58.0  power_forecast   MW   \n",
-      "5   57.5  power_forecast   MW   \n",
-      "\n",
-      "                                              labels  \n",
-      "0  {'site': 'Gotland', 'type': 'forecast', 'model...  \n",
-      "1  {'site': 'Gotland', 'type': 'forecast', 'model...  \n",
-      "2  {'site': 'Gotland', 'type': 'forecast', 'model...  \n",
-      "3  {'site': 'Gotland', 'type': 'forecast', 'model...  \n",
-      "4  {'site': 'Gotland', 'type': 'forecast', 'model...  \n",
-      "5  {'site': 'Gotland', 'type': 'forecast', 'model...  \n"
+      "                        known_time                valid_time  value\n",
+      "0 2026-02-15 21:48:32.651934+00:00 2025-01-01 00:00:00+00:00   60.0\n",
+      "1 2026-02-15 21:48:32.651934+00:00 2025-01-01 01:00:00+00:00   59.5\n",
+      "2 2026-02-15 21:48:32.651934+00:00 2025-01-01 02:00:00+00:00   59.0\n",
+      "3 2026-02-15 21:48:32.651934+00:00 2025-01-01 03:00:00+00:00   58.5\n",
+      "4 2026-02-15 21:48:32.651934+00:00 2025-01-01 04:00:00+00:00   58.0\n",
+      "5 2026-02-15 21:48:32.651934+00:00 2025-01-01 05:00:00+00:00   57.5\n"
      ]
     }
    ],
@@ -525,11 +501,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Known time from original insert: 2026-02-13T11:58:11.690948+00:00\n",
+      "Known time from original insert: 2026-02-15T21:48:32.651934+00:00\n",
       "\n",
-      "Method 1 (batch_id): updated=1, skipped=0\n",
-      "Method 2 (known_time): updated=1, skipped=0\n",
-      "Method 3 (latest):    updated=1, skipped=0\n",
       "\n",
       "Verified updated values:\n",
       "  2025-01-01T00:00:00+00:00: value=75.5\n",
@@ -569,7 +542,6 @@
     "response = requests.put(f\"{API_BASE_URL}/values\", json=update_1, headers=headers)\n",
     "response.raise_for_status()\n",
     "r1 = response.json()\n",
-    "print(f\"Method 1 (batch_id): updated={len(r1['updated'])}, skipped={len(r1['skipped_no_ops'])}\")\n",
     "\n",
     "# ── Method 2: Update by known_time ──────────────────────────────────────────\n",
     "# Target an exact version using known_time (uniquely identifies a batch)\n",
@@ -588,7 +560,6 @@
     "response = requests.put(f\"{API_BASE_URL}/values\", json=update_2, headers=headers)\n",
     "response.raise_for_status()\n",
     "r2 = response.json()\n",
-    "print(f\"Method 2 (known_time): updated={len(r2['updated'])}, skipped={len(r2['skipped_no_ops'])}\")\n",
     "\n",
     "# ── Method 3: Update latest version (just valid_time) ───────────────────────\n",
     "# Most convenient — targets the latest version overall, no batch_id or known_time needed\n",
@@ -606,7 +577,6 @@
     "response = requests.put(f\"{API_BASE_URL}/values\", json=update_3, headers=headers)\n",
     "response.raise_for_status()\n",
     "r3 = response.json()\n",
-    "print(f\"Method 3 (latest):    updated={len(r3['updated'])}, skipped={len(r3['skipped_no_ops'])}\")\n",
     "\n",
     "# ── Verify the updates ──────────────────────────────────────────────────────\n",
     "params_verify = {\n",
