--- a/examples/quickstart.ipynb
+++ b/examples/quickstart.ipynb
@@ -103,7 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "InsertResult(batch_id=1, workflow_id='sdk-workflow', series_ids={'wind_power': 1})"
+       "InsertResult(batch_id=1, workflow_id='sdk-workflow', series_id=1)"
       ]
      },
      "execution_count": 3,
@@ -119,7 +119,7 @@
     "\n",
     "df = pd.DataFrame({\n",
     "    'valid_time': times,\n",
-    "    'wind_power': values\n",
+    "    'value': values\n",
     "})\n",
     "\n",
     "# Insert with known_time (when forecast was made)\n",
@@ -148,7 +148,7 @@
     {
      "data": {
       "text/plain": [
-       "InsertResult(batch_id=2, workflow_id='sdk-workflow', series_ids={'wind_power': 1})"
+       "InsertResult(batch_id=2, workflow_id='sdk-workflow', series_id=1)"
       ]
      },
      "execution_count": 4,
@@ -163,7 +163,7 @@
     "\n",
     "df_revised = pd.DataFrame({\n",
     "    'valid_time': times,\n",
-    "    'wind_power': revised_values\n",
+    "    'value': revised_values\n",
     "})\n",
     "\n",
     "td.series('wind_power').where(site='offshore_1', type='forecast').insert(\n",
@@ -208,8 +208,8 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th>name</th>\n",
-       "      <th>wind_power</th>\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>valid_time</th>\n",
@@ -262,18 +262,18 @@
        "</div>"
       ],
       "text/plain": [
-       "name                       wind_power\n",
-       "valid_time                           \n",
-       "2025-01-01 00:00:00+00:00       105.0\n",
-       "2025-01-01 01:00:00+00:00       107.0\n",
-       "2025-01-01 02:00:00+00:00       109.0\n",
-       "2025-01-01 03:00:00+00:00       111.0\n",
-       "2025-01-01 04:00:00+00:00       113.0\n",
-       "2025-01-01 05:00:00+00:00       115.0\n",
-       "2025-01-01 06:00:00+00:00       117.0\n",
-       "2025-01-01 07:00:00+00:00       119.0\n",
-       "2025-01-01 08:00:00+00:00       121.0\n",
-       "2025-01-01 09:00:00+00:00       123.0"
+       "                           value\n",
+       "valid_time                      \n",
+       "2025-01-01 00:00:00+00:00  105.0\n",
+       "2025-01-01 01:00:00+00:00  107.0\n",
+       "2025-01-01 02:00:00+00:00  109.0\n",
+       "2025-01-01 03:00:00+00:00  111.0\n",
+       "2025-01-01 04:00:00+00:00  113.0\n",
+       "2025-01-01 05:00:00+00:00  115.0\n",
+       "2025-01-01 06:00:00+00:00  117.0\n",
+       "2025-01-01 07:00:00+00:00  119.0\n",
+       "2025-01-01 08:00:00+00:00  121.0\n",
+       "2025-01-01 09:00:00+00:00  123.0"
       ]
      },
      "execution_count": 5,
@@ -334,8 +334,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>wind_power</th>\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>known_time</th>\n",
@@ -390,18 +390,18 @@
        "</div>"
       ],
       "text/plain": [
-       "name                                                 wind_power\n",
-       "known_time                valid_time                           \n",
-       "2025-01-01 00:00:00+00:00 2025-01-01 00:00:00+00:00       100.0\n",
-       "                          2025-01-01 01:00:00+00:00       102.0\n",
-       "                          2025-01-01 02:00:00+00:00       104.0\n",
-       "                          2025-01-01 03:00:00+00:00       106.0\n",
-       "                          2025-01-01 04:00:00+00:00       108.0\n",
-       "                          2025-01-01 05:00:00+00:00       110.0\n",
-       "                          2025-01-01 06:00:00+00:00       112.0\n",
-       "                          2025-01-01 07:00:00+00:00       114.0\n",
-       "                          2025-01-01 08:00:00+00:00       116.0\n",
-       "                          2025-01-01 09:00:00+00:00       118.0"
+       "                                                     value\n",
+       "known_time                valid_time                      \n",
+       "2025-01-01 00:00:00+00:00 2025-01-01 00:00:00+00:00  100.0\n",
+       "                          2025-01-01 01:00:00+00:00  102.0\n",
+       "                          2025-01-01 02:00:00+00:00  104.0\n",
+       "                          2025-01-01 03:00:00+00:00  106.0\n",
+       "                          2025-01-01 04:00:00+00:00  108.0\n",
+       "                          2025-01-01 05:00:00+00:00  110.0\n",
+       "                          2025-01-01 06:00:00+00:00  112.0\n",
+       "                          2025-01-01 07:00:00+00:00  114.0\n",
+       "                          2025-01-01 08:00:00+00:00  116.0\n",
+       "                          2025-01-01 09:00:00+00:00  118.0"
       ]
      },
      "execution_count": 6,
@@ -453,9 +453,7 @@
     "plt.figure(figsize=(12, 6))\n",
     "\n",
     "for known_time, data in df_all.groupby(level='known_time'):\n",
-    "    # Convert pint quantities to plain values for plotting\n",
-    "    values = data['wind_power'].pint.magnitude if hasattr(data['wind_power'], 'pint') else data['wind_power'].values\n",
-    "    plt.plot(data.index.get_level_values('valid_time'), values, marker='o', label=f'Forecast at {known_time.strftime(\"%H:%M\")}')\n",
+    "    plt.plot(data.index.get_level_values('valid_time'), data['value'].values, marker='o', label=f'Forecast at {known_time.strftime(\"%H:%M\")}')\n",
     "\n",
     "plt.xlabel('Valid Time')\n",
     "plt.ylabel('Wind Power (MW)')\n",
